@@ -331,13 +331,6 @@ int fl_portable_vsnprintf(char *str, size_t str_m, const char *fmt, va_list ap);
 
 /* declarations */
 
-#if !defined(lint)
-static char credits[] = "\n\
-@(#)snprintf.c, v2.1: Mark Martinec, <mark.martinec@ijs.si>\n\
-@(#)snprintf.c, v2.1: Copyright 1999, Mark Martinec. Artistic license applies.\n\
-@(#)snprintf.c, v2.1: http://www.ijs.si/software/snprintf/\n";
-#endif
-
 #if defined(NEED_ASPRINTF)
 int asprintf(char **ptr, const char *fmt, /*args*/ ...) {
   va_list ap;
